# FlexAligner

./: .gitignore  LICENSE  README.md  compare.py  inspect_result.TextGrid  pyproject.toml  pytest.ini  requirements.txt  test.ipynb  test.py
.github/workflows/: ci.yml
Toolkit/: run_cpu.sh
Toolkit/scripts/: chunks2.py
Toolkit/test/: SP01_001.words.tsv
assets/dictionaries/: dict.mandarin.2  phones.json
assets/examples/: SP01_001.phones.tsv  SP01_001.txt  en.txt  zh.txt
assets/mfa_output/: SP01_001.TextGrid  alignment_analysis.csv  en.TextGrid  en_tts.TextGrid  zh.TextGrid
chunks_out/: DR1_FAKS0_SA1.chunks.jsonl  DR1_FAKS0_SA1.chunks.tsv  DR1_FAKS0_SA2.chunks.jsonl  DR1_FAKS0_SA2.chunks.tsv  DR1_FAKS0_SI1573.chunks.jsonl  DR1_FAKS0_SI1573.chunks.tsv  DR1_FAKS0_SI2203.chunks.jsonl  DR1_FAKS0_SI2203.chunks.tsv  DR1_FAKS0_SI943.chunks.jsonl  DR1_FAKS0_SI943.chunks.tsv  SP01_001.chunks.jsonl  SP01_002.chunks.jsonl  SP01_002.chunks.tsv  SP01_003.chunks.jsonl  SP01_004.chunks.jsonl  SP01_004.chunks.tsv  SP01_005.chunks.jsonl  en_tts.chunks.jsonl  en_tts.chunks.tsv  test_id.chunks.jsonl  test_id.chunks.tsv
legacy_verification_out/chunks/: SP01_001.chunks.jsonl
src/flexaligner/: __init__.py  align.sh  aligner.py  chunker.py  cli.py  config.py  frontend.py  io.py  pipeline.py  slurm-801084.out
src/flexaligner/dictionary/: dict.cuhk
src/flexaligner/scripts/: align_ce_w2v2.py  align_chunks_and_combine_textgrids.py  chunks2.py
tests/: SP01_001.TextGrid  test_999_en_wav.py  test_all.py  test_en_all.py  test_en_bach.py  test_en_frontend.py  test_frontend_robustness.py  test_integration.py  test_output.TextGrid  test_verify_stage1.py  test_verify_stage2.py  test_victory_lap.py  test_zh_bach.py
tests/outputs/: SP01_001_dynamic.TextGrid
tests/temp_chaos/: test_standard.flac  zh_bom.txt  zh_gbk.txt
tests/testfiles/en/: DR1_FAKS0_SA1.txt  DR1_FAKS0_SA2.txt  DR1_FAKS0_SI1573.txt  DR1_FAKS0_SI2203.txt  DR1_FAKS0_SI943.txt
tests/testfiles/en/flexaligner/: DR1_FAKS0_SA1.TextGrid  DR1_FAKS0_SA2.TextGrid  DR1_FAKS0_SI1573.TextGrid  DR1_FAKS0_SI2203.TextGrid  DR1_FAKS0_SI943.TextGrid
tests/testfiles/en/output_mfa_new/: DR1_FAKS0_SA1.TextGrid  DR1_FAKS0_SA2.TextGrid  DR1_FAKS0_SI1573.TextGrid  DR1_FAKS0_SI2203.TextGrid  DR1_FAKS0_SI943.TextGrid
tests/testfiles/zh/: SP01_001.TextGrid  SP01_002.TextGrid  SP01_003.TextGrid  SP01_005.TextGrid  SP01_005.txt
tests/testfiles/zh/flexaligner/: SP01_004.TextGrid
tests/testfiles/zh/legacy/: SP01_002.TextGrid  SP01_002.phones.tsv  SP01_002.words.tsv  SP01_003.TextGrid  SP01_003.phones.tsv  SP01_003.words.tsv  SP01_004.TextGrid  SP01_004.phones.tsv  SP01_004.words.tsv  SP01_005.TextGrid  SP01_005.phones.tsv  SP01_005.words.tsv
tests/testfiles/zh/legacy/SP01_001/chunks_stage1/: SP01_001.meta.json
tests/testfiles/zh/legacy/SP01_001/chunks_stage1/chunks/: SP01_001.chunks.jsonl  SP01_001.chunks.tsv
tests/testfiles/zh/legacy/SP01_001/work_stage2/json/: SP01_001.chunk001.json
tests/testfiles/zh/legacy/SP01_002/chunks_stage1/: SP01_002.meta.json  SP01_002.phones.ctm
tests/testfiles/zh/legacy/SP01_002/chunks_stage1/chunks/: SP01_002.chunks.jsonl
tests/testfiles/zh/legacy/SP01_002/work_stage2/json/: SP01_002.chunk001.json
tests/testfiles/zh/legacy/SP01_002/work_stage2/tg/: SP01_002.chunk001.TextGrid
tests/testfiles/zh/legacy/SP01_003/chunks_stage1/chunks/: SP01_003.chunks.jsonl  SP01_003.chunks.tsv
tests/testfiles/zh/legacy/SP01_004/chunks_stage1/: SP01_004.meta.json  SP01_004.phones.ctm
tests/testfiles/zh/legacy/SP01_005/chunks_stage1/: SP01_005.meta.json  SP01_005.phones.ctm
tests/testfiles/zh/legacy_modify/SP01_001/chunks_stage1/: SP01_001.phones.ctm
tests/testfiles/zh/legacy_modify/SP01_003/chunks_stage1/: SP01_003.meta.json  SP01_003.phones.ctm
verification_out/legacy_out/: SP01_001.meta.json
verification_out/legacy_out/chunks/: SP01_001.chunks.jsonl
verification_out/new_out/: SP01_001.chunks.jsonl
verification_out_pytest/legacy/: SP01_001.meta.json
verification_out_pytest/legacy/chunks/: SP01_001.chunks.jsonl
verification_out_pytest/new/: SP01_001.chunks.jsonl
verification_out_pytest/stage2/: SP01_001.TextGrid
work_align_legacy/json/: SP01_001.chunk001.json
work_align_legacy/tg/: SP01_001.chunk001.TextGrid
(+27 files in other folders)
