[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexaligner"
version = "0.1.1"
description = "Robust speech-text alignment framework with CTC Chunking and CE local alignment."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Wang Yiming", email = "wangyiming0369@gmail.com"},
    {name = "Jiahong Yuan", email = "jiahongyuan@ustc.edu.cn"}
]

# 核心运行依赖 (L1: FAST 模式)
# 确保中英双语清洗、基础计算、模型加载的物理闭环
dependencies = [
    "torch>=2.0.0",
    "torchaudio",
    "transformers",
    "soundfile",
    "numpy",
    "scipy",     # 用于 FAST 模式下的基础重采样
    "praatio",  
    "tqdm",
    "jieba",
    "g2p_en",
    "num2words", # [NEW] 核心依赖：英语数字归一化
    "chardet",   # 编码识别
    "nltk",      # g2p_en 的底层支持
]

[project.optional-dependencies]
# L2: 坦克级鲁棒模式所需的重型依赖 (音频处理增强)
robust = [
    "librosa",
]
# L3: 安全增强模式
secure = [
    "python-magic", 
]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-timeout",
]
dev = [
    "ruff",
]
# 确保 CI 或开发者使用 'pip install -e .[all]' 时能覆盖所有组件
all = [
    "flexaligner[robust,secure,test,dev]",
]

[project.scripts]
flex-align = "flexaligner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flexaligner*"]

[tool.setuptools.package-data]
flexaligner = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]