[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexaligner"
version = "1.0.0"  # 既然我们已经实现了全闭环和 CLI，直接上 1.0.0 吧！
description = "Robust Signal-to-Symbol alignment framework for wild real-world speech."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Wang Yiming", email = "wangyiming0369@gmail.com"},
    {name = "Jiahong Yuan", email = "jiahongyuan@ustc.edu.cn"}
]
license = {text = "MIT"}

# 核心运行依赖 (L1: FAST 模式)
# [修正] 移除了 praatio，因为我们实现了自研的高效 TextGrid 导出器
dependencies = [
    "torch>=2.0.0",
    "torchaudio",
    "transformers",
    "soundfile",
    "numpy",
    "scipy",      # 用于 FAST 模式下的基础重采样
    "tqdm",       # [NEW] 批处理进度条核心依赖
    "jieba",      # 中文分词
    "g2p_en",     # 英文 G2P
    "num2words",  # 英文数字归一化
    "chardet",    # 编码识别
    "nltk",       # g2p_en 的底层支持
]

[project.optional-dependencies]
# L2: 坦克级鲁棒模式所需的重型依赖 (音频处理增强)
robust = [
    "librosa",    # 用于复杂音频的重采样和加载
]
# L3: 安全增强模式
secure = [
    "python-magic", 
]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-timeout",
]
dev = [
    "ruff",
]
# 一键安装所有功能的开发环境
all = [
    "flexaligner[robust,secure,test,dev]",
]

[project.scripts]
# [修正] 双入口策略：满足不同用户的习惯
# 1. flexaligner: 包名即命令，最直观
flexaligner = "flexaligner.cli:main"
# 2. flex-align: 短命令，打字快
flex-align = "flexaligner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flexaligner*"]

[tool.setuptools.package-data]
# 确保内置的字典或小资源能被打包
flexaligner = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]